[package]
name = "mongo"
version = "0.1.0"
edition = "2021"
[dependencies]
#序列化和反序列化
serde = { version="1.0.154", features = ["derive"] }
#序列化和反序列化json
serde_json = "1.0.94"
futures = "0.3.27"
tokio = { version="1.26.0", features = ["full"]}
mongodb ={version = "2.4.0",default-features = false,features = ["tokio-sync"]}