[package]
name = "mongo"
version = "0.1.1"
edition = "2021"
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
[dependencies]
#序列化和反序列化
serde = { version="1.0.158", features = ["derive"] }
#序列化和反序列化json
serde_json = "1.0.94"
futures = "0.3.27"
tokio = { version="1.26.0", features = ["full"]}
# mongo 数据库
mongodb ={version = "2.5.0",default-features = false,features = ["tokio-sync"]}
#mongodb ={version = "2.5.0",default-features = false,features = ["async-std-runtime"]}